[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/skins/PlayerGreenSkin.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 10.5 )

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_layer = 2
script = ExtResource( 2 )
JUMP_FORCE = -140
MINIMUM_JUMP = -40
MAX_SPEED = 100
ACCELERATION = 720
FRICTION = 600
GRAVITY = 300
ADDITIONAL_FALL_GRAVITY = 120

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = ExtResource( 1 )
animation = "Jump"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10.5 )
shape = SubResource( 3 )

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( 0, 18 )
collide_with_areas = true
collide_with_bodies = false

[node name="coyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2( 0, -12 )

[connection signal="timeout" from="coyoteJumpTimer" to="." method="_on_coyoteJumpTimer_timeout"]
